--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
